--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
         </div>
         <div class="section" id="second_section">
           <h2 id="about_headline">About</h2>
-          <p id="about_text">
-            Auf einem n x n großen Schachfeld sollen n Damen so aufgestellt werden, dass keine Dame eine andere bedroht. Dieses klassische Schachproblem haben wir auf einem adiabatischen Quantencomputer gelöst. Des Weiteren konnten wir unsere Lösungsstrategien auf andere Optimierungsprobleme, wie z.B. Sudokus und das Springerproblem, übertragen.Bei unserer Arbeit ging es aber nicht um das Finden von Lösungen für das n-Damenproblem, wofür es bereits gut geeignete Algorithmen auf herkömmlichen Computern gibt, sondern viel mehr um die Aufbereitung des Problems, die notwendig ist, damit es mit dem von uns verwendeten Quantencomputer, einem sogenannten adiabatischen Quantum-Annealer, gelöst werden kann.Für unser Vorhaben mussten wir das Damenproblem in die Sprache der Mathematik übersetzen. Dabei galt es, eine Funktion zu definieren, die für jede Konstellation der Damen auf dem Schachbrett einen Wert zurückgibt, den man in der Optimierung als "Energie" der Verteilung bezeichnet. Die Aufgabe des Quantum-Annealers ist es dann, das globale Minimum dieser Energiefunktion und damit automatisch auch eine richtige Lösung zu finden. Welche Schwierigkeiten wir bewältigen mussten und zu welchen Ergebnissen wir beim Ausführen der Programme gekommen sind, können Sie in unserer Dokumentation lesen.
-          </p>
+          <p class="about_text">Auf einem n x n großen Schachfeld sollen n Damen so aufgestellt werden, dass keine Dame eine andere bedroht. Dieses klassische Schachproblem haben wir auf einem adiabatischen Quantencomputer gelöst.</p>
+          <p class="about_text">Des Weiteren konnten wir unsere Lösungsstrategien auf andere Optimierungsprobleme, wie z.B. Sudokus und das Springerproblem, übertragen.</p>
+          <p class="about_text">Bei unserer Arbeit ging es aber nicht um das Finden von Lösungen für das n-Damenproblem, wofür es bereits gut geeignete Algorithmen auf herkömmlichen Computern gibt, sondern viel mehr um die Aufbereitung des Problems, die notwendig ist, damit es mit dem von uns verwendeten Quantencomputer, einem sogenannten adiabatischen Quantum-Annealer, gelöst werden kann.</p>
+          <p class="about_text">Für unser Vorhaben mussten wir das Damenproblem in die Sprache der Mathematik übersetzen. Dabei galt es, eine Funktion zu definieren, die für jede Konstellation der Damen auf dem Schachbrett einen Wert zurückgibt, den man in der Optimierung als "Energie" der Verteilung bezeichnet.</p>
+          <p class="about_text">Die Aufgabe des Quantum-Annealers ist es dann, das globale Minimum dieser Energiefunktion und damit automatisch auch eine richtige Lösung zu finden.</p>
+          <p class="about_text">Welche Schwierigkeiten wir bewältigen mussten und zu welchen Ergebnissen wir beim Ausführen der Programme gekommen sind, können Sie in unserer Dokumentation lesen.</p>
         </div>
         <div class="section" id="third_section">
           <h2 id="history_title">Verlauf</h2>
@@ -87,6 +90,39 @@
               <img class="news_icon" src="/assets/share.svg"></img>
               <a class="news_text" target="_blank" href="https://www.mittelbayerische.de/region/regensburg-stadt-nachrichten/jugend-forscht-domspatzen-im-finale-21179-art1767967.html">Mittelbayerische</a>
             </div>
+            <div class="y_spacer_medium"></div>
+            <div class="location">
+              <img class="location_icon" src="/assets/location.svg"></img>
+              <b class="location_text">München / Staatsempfang</b>
+            </div>
+            <div class="gallerie" data-current_id="1">
+              <div class="gallerie_controll_container">
+                <img class="gallerie_controll" onclick="gallerie_controll_clicked()" data-controll-direction="back" src="/assets/arrow_back.svg"></img>
+              </div>
+              <div class="picture_container">
+                <img src="pictures/11.jpg" class="picture" data-id="1"></img>
+                <img src="pictures/10.jpeg" class="picture" data-id="2"></img>
+                <img src="pictures/12.jpeg" class="picture" data-id="3"></img>
+              </div>
+              <div class="gallerie_controll_container">
+                <img class="gallerie_controll" onclick="gallerie_controll_clicked()" data-controll-direction="forward" src="/assets/arrow_forward.svg"></img>
+              </div>
+            </div>
+            <h3 id="upcoming_text">Upcoming:</h3>
+            <div id="upcoming_container">
+                <div class="location">
+                  <img class="location_icon" src="/assets/location.svg"></img>
+                  <b class="location_text">Chemnitz / Bundesentscheid</b>
+                </div>
+                <div class="location">
+                  <img class="location_icon" src="/assets/location.svg"></img>
+                  <a class="location_link" href="https://www.isc-hpc.com/" targe="_blank"><b class="location_text">ISC</b></a>
+                </div>
+                <div class="location">
+                  <img class="location_icon" src="/assets/location.svg"></img>
+                  <b class="location_text">CCC</b>
+                </div>
+            </div>
           </div>
         </div>
         <div class="section" id="fourth_section">
@@ -112,21 +148,31 @@
               <a href="https://play.google.com/store/apps/details?id=com.geniuseful.ndamen" target="_blank"><img class="download_icon" src="/assets/download.svg"></img></a>
               <p class="download_text">N-Damen App (Play Store)</p>
             </div>
+            <div class="download">
+                <a href="https://git.fractava.com/quantencomputer-jufo-2019/jufo-n-queens-problem" target="_blank"><img class="download_icon" src="/assets/gitlab.svg"></img></a>
+                <p class="download_text">Git Repository</p>
+            </div>
           </div>
         </div>
         <div class="section" id="fifth_section">
           <h2 id="thanks_headline">Wir bedanken uns bei:</h2>
+          <p>Wir bedanken uns bei unserem Projektbetreuer René Grünbauer für die Betreuung und den Kontakt zum Forschungszentrum Jülich. Außerdem möchten wir uns bei Prof. Dr. Kristel Michielsen vom Forschungszentrum Jülich für ihre Unterstützung und die Rechenzeit am D-Wave Quantencomputer bedanken. Nicht zuletzt wollen wir Herrn Dennis Willsch aus der Forschungsgruppe von Prof. Michielsen für die Erklärungen und Hilfestellungen rund um die Benutzung und Steuerung des Quantencomputers danken.</p>
           <ul id="thanks_list">
             <li>Rene Grünbauer (der beste Betreuer der Welt)</li>
-            <li>Dr. Patrick Glauner für die Einladung einen Vortrag für Krones zu geben</li>
+            <!--<li>Dr. Patrick Glauner für die Einladung einen Vortrag für Krones zu geben</li>
             <li>Dennis Willsch vom Forschungszentrum Jülich</li>
-            <li>Andreas Neunzer und Katharina Scharr für die großartigen Verbesserungsvorschläge</li>
+            <li>Andreas Neunzer und Katharina Scharr für die großartigen Verbesserungsvorschläge</li>-->
+            <li>Prof. Dr. Kristel Michielsen vom Forschungszentrum Jülich für die Rechenzeit auf dem D-Wave Quantencomputer und die Einladung einen Vortrag beim ISC 19 zu halten</li>
+            <li>Dennis Willsch vom Forschungszentrum Jülich für die Erklärungen und Hilfestellungen rund um die Benutzung und Steuerung des Quantencomputers</li>
+            <li>Herrn Dr. Patrick Glauner für die Einladung, einen Vortrag bei der Krones AG zu halten</li>
+            <li>Frau Dr. Katharina Schaar und den anderen Juroren des Fachbereichs Mathematik beim Landeswettbewerb Jugend Forscht für die vielen Verbesserungsvorschläge</li>
+            <li>Herrn Dr. Andreas Neuzner (Physik Juror, Landeswettbewerb Jugend Forscht) für den Kontakt zum MPQ, an dem wir einen Vortrag halten dürfen</li>
             <li>Pfleiderer und Dräxlmaier</li>
           </ul>
         </div>
         <div class="section" id="footer_section">
           <p class="footer_text">©Jakov Wallbrecher (14), Paul Schappert (15), Jonathan Treffler (16) , 2019</p>
-          <p class="footer_text">quantum@domspatzen.de</p>
+          <p class="footer_text">mail@domspatzen-quantum.de</p>
         </div>
       </body>
     </html>
