--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js" async></script>
         <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.3/mobile-detect.min.js" async></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8" async></script>
         <script src="/js/script.js" async></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139965444-1"></script>
+
       </head>
       <body onload="onload();">
         <div id="zoom_blur_background" onclick="closeZoom();"></div>
