--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <img class="gallerie_controll" data-controll-direction="forward" src="/assets/arrow_forward.svg"></img>
               </div>
             </div>
-            <h3 id="upcoming_text">Upcoming:</h3>
+            <h3 class="location_text">Upcoming:</h3>
             <div id="upcoming_container">
                 <div class="location">
                   <img class="location_icon" src="/assets/location.svg"></img>
@@ -157,6 +157,23 @@
           </div>
         </div>
         <div class="section" id="fourth_section">
+          <h2 id="thanks_headline">Wir bedanken uns bei:</h2>
+          <!--<p>Wir bedanken uns bei unserem Projektbetreuer René Grünbauer für die Betreuung und den Kontakt zum Forschungszentrum Jülich. Außerdem möchten wir uns bei Prof. Dr. Kristel Michielsen vom Forschungszentrum Jülich für ihre Unterstützung und die Rechenzeit am D-Wave Quantencomputer bedanken. Nicht zuletzt wollen wir Herrn Dennis Willsch aus der Forschungsgruppe von Prof. Michielsen für die Erklärungen und Hilfestellungen rund um die Benutzung und Steuerung des Quantencomputers danken.</p>-->
+          <ul id="thanks_list">
+            <li>Rene Grünbauer (der beste Betreuer der Welt)</li>
+            <!--<li>Dr. Patrick Glauner für die Einladung einen Vortrag für Krones zu geben</li>
+            <li>Dennis Willsch vom Forschungszentrum Jülich</li>
+            <li>Andreas Neunzer und Katharina Scharr für die großartigen Verbesserungsvorschläge</li>-->
+            <li>Prof. Dr. Kristel Michielsen vom Forschungszentrum Jülich für die Rechenzeit auf dem D-Wave Quantencomputer und die Einladung einen Vortrag beim ISC 19 zu halten</li>
+            <li>Dennis Willsch vom Forschungszentrum Jülich für die Erklärungen und Hilfestellungen rund um die Benutzung und Steuerung des Quantencomputers</li>
+            <li>Herrn Dr. Patrick Glauner für die Einladung, einen Vortrag bei der Krones AG zu halten</li>
+            <li>Frau Dr. Katharina Schaar und den anderen Juroren des Fachbereichs Mathematik beim Landeswettbewerb Jugend Forscht für die vielen Verbesserungsvorschläge</li>
+            <li>Herrn Dr. Andreas Neuzner (Physik Juror, Landeswettbewerb Jugend Forscht) für den Kontakt zum MPQ, an dem wir einen Vortrag halten dürfen</li>
+            <li>Stephan Ritter für die großartigen Tips für den Bundeswettbewerb</li>
+            <li>Pfleiderer und Dräxlmaier</li>
+          </ul>
+        </div>
+        <div class="section" id="fifth_section">
           <h2 id="downloads_headline">Downloads</h2>
           <div id="downloads_flexbox">
             <div class="download">
@@ -184,23 +201,6 @@
                 <p class="download_text">Git Repository</p>
             </div>
           </div>
-        </div>
-        <div class="section" id="fifth_section">
-          <h2 id="thanks_headline">Wir bedanken uns bei:</h2>
-          <p>Wir bedanken uns bei unserem Projektbetreuer René Grünbauer für die Betreuung und den Kontakt zum Forschungszentrum Jülich. Außerdem möchten wir uns bei Prof. Dr. Kristel Michielsen vom Forschungszentrum Jülich für ihre Unterstützung und die Rechenzeit am D-Wave Quantencomputer bedanken. Nicht zuletzt wollen wir Herrn Dennis Willsch aus der Forschungsgruppe von Prof. Michielsen für die Erklärungen und Hilfestellungen rund um die Benutzung und Steuerung des Quantencomputers danken.</p>
-          <ul id="thanks_list">
-            <li>Rene Grünbauer (der beste Betreuer der Welt)</li>
-            <!--<li>Dr. Patrick Glauner für die Einladung einen Vortrag für Krones zu geben</li>
-            <li>Dennis Willsch vom Forschungszentrum Jülich</li>
-            <li>Andreas Neunzer und Katharina Scharr für die großartigen Verbesserungsvorschläge</li>-->
-            <li>Prof. Dr. Kristel Michielsen vom Forschungszentrum Jülich für die Rechenzeit auf dem D-Wave Quantencomputer und die Einladung einen Vortrag beim ISC 19 zu halten</li>
-            <li>Dennis Willsch vom Forschungszentrum Jülich für die Erklärungen und Hilfestellungen rund um die Benutzung und Steuerung des Quantencomputers</li>
-            <li>Herrn Dr. Patrick Glauner für die Einladung, einen Vortrag bei der Krones AG zu halten</li>
-            <li>Frau Dr. Katharina Schaar und den anderen Juroren des Fachbereichs Mathematik beim Landeswettbewerb Jugend Forscht für die vielen Verbesserungsvorschläge</li>
-            <li>Herrn Dr. Andreas Neuzner (Physik Juror, Landeswettbewerb Jugend Forscht) für den Kontakt zum MPQ, an dem wir einen Vortrag halten dürfen</li>
-            <li>Stephan Ritter für die großartigen Tips für den Bundeswettbewerb</li>
-            <li>Pfleiderer und Dräxlmaier</li>
-          </ul>
         </div>
         <div class="section" id="footer_section">
           <p class="footer_text">©Jakov Wallbrecher (14), Paul Schappert (15), Jonathan Treffler (16) , 2019</p>
