--- a/index.html
+++ b/index.html
@@ -206,13 +206,19 @@
               <img class="news_icon" alt="" src="/assets/share.svg">
               <a class="news_text" target="_blank" rel="noreferrer" href="https://www.youtube.com/watch?v=aM_pAA9FdYY">YouTube (Aufzeichnung)</a>
             </div>
-            <h3 class="location_text" id="upcoming_text">Upcoming:</h3>
-            <div id="upcoming_container">
-                <div class="location">
-                  <img class="location_icon" alt="" src="/assets/location.svg">
-                  <b class="location_text">36C3 (29.12.2019 19:00 Chaos Zone)</b>
-                </div>
+            <div class="y_spacer_medium"></div>
+            
+            <div class="location">
+                <img class="location_icon" alt="" src="/assets/location.svg">
+                <b class="location_text">36C3 (Chaos Zone)</b>
             </div>
+            <div class="date">
+              <img class="date_icon" alt="" src="/assets/calendar.svg">
+              <p class="date_text">29.12.2019 19:00</p>
+            </div>
+            <!--<h3 class="location_text" id="upcoming_text">Upcoming:</h3>
+            <div id="upcoming_container">
+            </div>-->
           </div>
         </div>
         <div class="section" id="fourth_section">
