moved from gitlab to github

--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
 		</a>
             </div>
             <div class="download">
-                <a class="download_a" href="https://git.fractava.com/quantencomputer-jufo-2019/jufo-n-queens-problem" target="_blank" rel="noreferrer">
-			<img class="download_icon" alt="zum Git Repository"  src="/assets/gitlab.svg">
-                	<p class="download_text">Git Repository</p>
+                <a class="download_a" href="https://github.com/Quantum-Computing-Jufo-2019/JuFo-2019-Quantum-Computing" target="_blank" rel="noreferrer">
+			<img class="download_icon" alt="zum Github Repository"  src="/assets/github.png">
+                	<p class="download_text">Github Repository</p>
 		</a>
             </div>
           </div>
@@ -285,3 +285,4 @@
         </div>
       </body>
     </html>
+
