--- a/src/index.html
+++ b/src/index.html
@@ -216,6 +216,17 @@
               <img class="date_icon" alt="" src="/assets/calendar.svg">
               <p class="date_text">29.12.2019 19:00</p>
             </div>
+            <div class="gallerie" data-current_id="1">
+                <div class="gallerie_controll_container">
+                    <img class="gallerie_controll" alt="" data-controll-direction="back" src="/assets/arrow_back.svg">
+                </div>
+                <div class="picture_container">
+                    <img loading="lazy" src="pictures/24.jpg" alt="CCC RGB Einhorn" class="picture" data-id="1">
+                </div>
+                <div class="gallerie_controll_container">
+                    <img class="gallerie_controll" alt="" data-controll-direction="forward" src="/assets/arrow_forward.svg">
+                </div>
+            </div>
             <!--<h3 class="location_text" id="upcoming_text">Upcoming:</h3>
             <div id="upcoming_container">
             </div>-->
