--- a/src/index.html
+++ b/src/index.html
@@ -222,6 +222,7 @@
                 </div>
                 <div class="picture_container">
                     <img loading="lazy" src="pictures/24.jpg" alt="CCC RGB Einhorn" class="picture" data-id="1">
+                    <img loading="lazy" src="pictures/25.jpg" alt="CCC Chaos Zone" class="picture" data-id="2">
                 </div>
                 <div class="gallerie_controll_container">
                     <img class="gallerie_controll" alt="" data-controll-direction="forward" src="/assets/arrow_forward.svg">
