--- a/src/index.html
+++ b/src/index.html
@@ -206,8 +206,10 @@
               <img class="news_icon" alt="" src="/assets/share.svg">
               <a class="news_text" target="_blank" rel="noreferrer" href="https://www.youtube.com/watch?v=aM_pAA9FdYY">YouTube (Aufzeichnung)</a>
             </div>
-	    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">3 members of the Regensburger Domspatzen (13, 14, 15) show the professionals at <a href="https://twitter.com/isc19?ref_src=twsrc%5Etfw">@ISC19</a> how to solve the n-queens, the knights tour, the 4x4 sudoku, and the n-amazons problem on <a href="https://twitter.com/dwavesys?ref_src=twsrc%5Etfw">@dwavesys</a>. Chapeau! (credits to Kristel Michielsen from <a href="https://twitter.com/fzj_jsc?ref_src=twsrc%5Etfw">@fzj_jsc</a> for consulting.) <a href="https://twitter.com/DomspatzenRgbg?ref_src=twsrc%5Etfw">@DomspatzenRgbg</a> <a href="https://t.co/9QEmIAR2Mb">pic.twitter.com/9QEmIAR2Mb</a></p>&mdash; Thomas Lippert (@Tomtherhymer) <a href="https://twitter.com/Tomtherhymer/status/1141280921238331392?ref_src=twsrc%5Etfw">June 19, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <div class="y_spacer_medium"></div>
+	    <div class="tweetContainer">
+	    	<blockquote class="twitter-tweet"><p lang="en" dir="ltr">3 members of the Regensburger Domspatzen (13, 14, 15) show the professionals at <a href="https://twitter.com/isc19?ref_src=twsrc%5Etfw">@ISC19</a> how to solve the n-queens, the knights tour, the 4x4 sudoku, and the n-amazons problem on <a href="https://twitter.com/dwavesys?ref_src=twsrc%5Etfw">@dwavesys</a>. Chapeau! (credits to Kristel Michielsen from <a href="https://twitter.com/fzj_jsc?ref_src=twsrc%5Etfw">@fzj_jsc</a> for consulting.) <a href="https://twitter.com/DomspatzenRgbg?ref_src=twsrc%5Etfw">@DomspatzenRgbg</a> <a href="https://t.co/9QEmIAR2Mb">pic.twitter.com/9QEmIAR2Mb</a></p>&mdash; Thomas Lippert (@Tomtherhymer) <a href="https://twitter.com/Tomtherhymer/status/1141280921238331392?ref_src=twsrc%5Etfw">June 19, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	    </div>
+	    <div class="y_spacer_medium"></div>
             
             <div class="location">
                 <img class="location_icon" alt="" src="/assets/location.svg">
