--- a/src/index.html
+++ b/src/index.html
@@ -224,13 +224,13 @@
                     <img class="gallerie_controll" alt="" data-controll-direction="back" src="/assets/arrow_back.svg">
                 </div>
                 <div class="picture_container">
-		    <img loading="lazy" src="pictures/26.jpg" alt="Rakete" class="picture" data-id="1">
+		    <img loading="lazy" src="pictures/26.JPG" alt="Rakete" class="picture" data-id="1">
 		    <img loading="lazy" src="pictures/27.jpg" alt="Rakete mit uns" class="picture" data-id="2">
                     <img loading="lazy" src="pictures/24.jpg" alt="CCC RGB Einhorn" class="picture" data-id="3">
                     <img loading="lazy" src="pictures/25.jpg" alt="CCC Chaos Zone" class="picture" data-id="4">
-		    <img loading="lazy" src="pictures/28.jpg" alt="Löten" class="picture" data-id="5">
-		    <img loading="lazy" src="pictures/29.jpg" alt="Chaos Zone Gruppenbild" class="picture" data-id="6">
-		    <img loading="lazy" src="pictures/30.jpg" alt="Vortrag Plakat CCC Design" class="picture" data-id="7">
+		    <img loading="lazy" src="pictures/28.jpeg" alt="Löten" class="picture" data-id="5">
+		    <img loading="lazy" src="pictures/29.jpeg" alt="Chaos Zone Gruppenbild" class="picture" data-id="6">
+		    <img loading="lazy" src="pictures/30.jpeg" alt="Vortrag Plakat CCC Design" class="picture" data-id="7">
                 </div>
                 <div class="gallerie_controll_container">
                     <img class="gallerie_controll" alt="" data-controll-direction="forward" src="/assets/arrow_forward.svg">
