--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,7 @@
                     <img class="gallerie_controll" alt="" data-controll-direction="back" src="/assets/arrow_back.svg">
                 </div>
                 <div class="picture_container">
-		    <img loading="lazy" src="pictures/26.JPG" alt="Rakete" class="picture" data-id="1">
+		    <img loading="lazy" src="pictures/26.JPG" alt="Rakete" class="picture" data-id="1" data-source="Freddy2001 from Wikimedia Commons">
 		    <img loading="lazy" src="pictures/27.jpg" alt="Rakete mit uns" class="picture" data-id="2">
                     <img loading="lazy" src="pictures/24.jpg" alt="CCC RGB Einhorn" class="picture" data-id="3">
                     <img loading="lazy" src="pictures/25.jpg" alt="CCC Chaos Zone" class="picture" data-id="4">
